WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309472
[JSC] `Promise.resolve` with subclass constructor should not return base Promise
https://bugs.webkit.org/show_bug.cgi?id=309472
Summary
[JSC] `Promise.resolve` with subclass constructor should not return base Promise
Sosuke Suzuki
Reported
2026-03-08 20:51:02 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-03-08 20:51:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60173
EWS
Comment 2
2026-03-09 01:03:32 PDT
Committed
308899@main
(6309e93f8193): <
https://commits.webkit.org/308899@main
> Reviewed commits have been landed. Closing PR #60173 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-09 01:04:12 PDT
<
rdar://problem/172066858
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug